# Quark-old

./: .clang_format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt
Engine/: CMakeLists.txt
Engine/dependencies/glad/: glad.c  glad.h
Engine/include/: constants.hpp  event.hpp  matrix.hpp  render_window.hpp  texture.hpp  vector.hpp
Engine/src/: image.cpp  main.cpp  qrk_debug.cpp  rect.cpp  stb_truetype.cpp  texture.cpp
clock/: lc.txt  line_count_default.txt
dependencies/: OpenGL.h  glext.h
dependencies/glad/: glad.h
engine/: CMakeLists.txt
engine/include/: GL_assets.hpp  draw.hpp  event.hpp  glyph_renderer.hpp  image.hpp  object.hpp  qrk_debug.hpp  rect.hpp  stb_rectPack.hpp  vector.hpp  window.hpp
engine/src/: GL_assets.cpp  draw.cpp  glyph_renderer.cpp  rect.cpp  texture.cpp
include/: GL_assets.hpp  app_entry_point.hpp  color.hpp  constants.hpp  draw.hpp  event.hpp  glyph_renderer.hpp  io_addresses.hpp  matrix.hpp  misc_functions.hpp  object.hpp  qrk_debug.hpp  rect.hpp  stb_truetype.hpp  texture.hpp  units.hpp  vector.hpp  window.hpp
objects/materialTests/: basicMaterial.txt
resources/shaders/: 2d_fragment_shader.frag  2d_vertex_shader.vert  3d_fragment_shader.frag  text_fragment_shader.frag  text_vertex_shader.vert
shaders/: 3d_fragment_shader.frag  3d_vertex_shader.vert
src/: GL_assets.cpp  app_entry_point.cpp  draw.cpp  event.cpp  glyph_renderer.cpp  main.cpp  misc_functions.cpp  object.cpp  qrk_debug.cpp  rect.cpp  stb_rectPack.cpp  texture.cpp  window.cpp
testing/src/: main.cpp
